gitops/platform-instances/gitea/openshift/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: developer-lightspeed-workshop
spec:
  to:
    kind: Service
    name: gitea-http
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
